  * These are now additionally skipped
- Improves `DefaultSelection` Feature
  * A substring match is now only attempted if an exact match fails
- Improves CSR Handling
  * Multiple tweaks to improve handling CSR settings
  * Includes improvements to the `DynamicCSR` feature
- Improves `System Shutdown/Restart` Handling
  * Now displays a confirmation input screen before execution
- Amends `Big Selection Image` Size Filtering
  * The maximum Big Selection image size is increased to 320px from 256px
  * The Small Selection image maximum is maintained at 256px
- Amends `ScanAllESP` Feature
  * Now aligned with upstream implementation and scans all ESPs by default
  * Hence, the "Opt-Out" `decline_esp_filter` token has been replaced by an "Opt-In `enable_esp_filter` token
  * A previous issue where the token operated the wrong way round has been fixed
- Amends `RescanDXE` Feature
  * Now does not try to dispatch additional DXE drivers by default
  * Hence, the "Opt-Out" `disable_rescan_dxe` token has been replaced by an "Opt-In `enable_rescan_dxe` token
- Amends `Invalid UEFI Versions` Handling
  * Now accounts for such by reducing the amendment threshold to UEFI 2.0
  * Still amends to UEFI 2.3 when UEFI amendments happen
  * No longer amends Runtime Services for UEFI amendments
  * No longer disables certain features on detecting inconsistent versions
  * No longer displays a warning messages and the discrepancy is only logged


0.13.3.AC (06 Dec 2022):
-----------------------
- Adds `NvramProtectEx` Feature
  * Extends the `NvramProtect` feature (if set) to Mac OS and `Unknown` UEFI boots
  * The feature can be enabled using a new `nvram_protect_ex` configuration token
    - Replaces the `FocusNvramFix` feature which has been removed
    - Essentially restores functionality from `EnableMacosFilter` previously replaced by `FocusNvramFix`
- Fixes `QueryVariableInfo` Handling
  * Now properly handled on `UEFI-Mac` units