@@ -24,6 +24,9 @@
   * Includes improvements to the `DynamicCSR` feature
 - Improves `System Shutdown/Restart` Handling
   * Now displays a confirmation input screen before execution
+- Improves Misc Graphics Handling
+  * Improves graphics related memory management
+  * Improves UGA support via new `PassGopThrough` feature (Not user configurable)
 - Amends `Big Selection Image` Size Filtering
   * The maximum Big Selection image size is increased to 320px from 256px
   * The Small Selection image maximum is maintained at 256px
